# sdec

./: .gitignore  NOTICE  README.md  appa.py  canard_fc.py  commands.py  config.py  controller.py  dashboard.py  doc.py  engineController.py  feb0425.csv  flash_data_reader.py  flightComputer.py  globals.yaml  hw_commands.py  output.csv  parser.py  plot_data.py  pyproject.toml  readerCSV.csv  requirements.txt  sdec.py  sensor_conv.py  sensor_plot.py  state_estimator.py  terminal.py  test.py  valveController.py
LAS/: parsing.py
data/: mcu_database.json
doc/: comports  connect  dual-deploy  flash  flight_comp_rev2_sensor_data_3.txt  ignite  manpage  ping  power  sensor  servo  sol  valve
input/: README.md  aes.key  appa_config.csv  telem.cfg
output/: README.md  int_data.txt  sensor_data.txt
plugins/: comport.py  engine.py  hardware.py  valve.py
sdec/: __main__.py  commands.py  controller.py  engineController.py  flightComputer.py  hw_commands.py  plot_data.py  sensor_conv.py  valveController.py
sdec/doc/: connect  dual-deploy  flash  ignite  manpage  ping  power  sensor  valve
