[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["input", "output"]
include = ["sdec"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
sdec = ["doc/*"]

[project]
name = "sdec"
authors = [
    {name = "Colton Acosta"},
    {name = "Nick Nguyen"},
    {name = "Anton Sazonov"},
    {name = "Brian Lew"},
    {name = "Alexander Linderman"},
]
version = "2024.9.0+packagingdev"
dependencies = [
    "pyserial",
    "matplotlib",
    "numpy"
]
readme = "README.md"